--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <input type="text" id="input-el">
         <button id="input-btn">SAVE INPUT</button>
+        <ul id="list-el"></ul>
         <script src="script.js"></script>
     </body>
 </html>
